--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-12.12
+resolver: lts-12.14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -38,8 +38,15 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps: 
+  - wai-extra-3.0.22.0
+  - process-streaming-0.9.3.0
+  - conceit-0.4.0.0
+  - pipes-text-0.0.2.5
+  - pipes-transduce-0.4.4.0  
+  - streaming-commons-0.1.19
 
+#allow-newer: true  
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
