--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,7 @@ dependencies:
 - pipes-safe
 - process
 - stm
+- pipes-bytestring
 
 library:
   source-dirs: src
@@ -65,6 +66,7 @@ executables:
     - pipes-safe
     - process
     - stm
+    - pipes-bytestring
 
 tests:
   ursus-maritimus-test:
